# docspiler

./: Cargo.toml
crate/core_ast/: Cargo.toml
crate/core_ast/src/: ast.rs  lib.rs
crate/docspiler_ast/: Cargo.toml
crate/docspiler_ir/: Cargo.toml
crate/docspiler_ir/src/: block.rs  lib.rs
crate/docx_gen/: Cargo.toml
crate/funcs/: Cargo.toml
crate/funcs/src/: lib.rs  lines.rs  text_size.rs
crate/layout_galley/: Cargo.toml
crate/layout_physical/: Cargo.toml
crate/mathml_core/: Cargo.toml  NOTICE.md  README.md  README_ja.md  build.rs
crate/mathml_core/assets/: CR-mathml-core-20250624.html
crate/mathml_core/src/: lib.rs  mathml_attr_value.rs  mathml_model.rs  mathml_symbol.rs  mathml_tables.rs  mathml_xml.rs
crate/mathml_core/tests/: gen_appendix_tables_test.rs  mathml_e2e.rs
crate/mathml_core/tests/mathml/: appendix_b3_combining_character_equivalences_test.rs  appendix_b4_unicode_based_glyph_assemblies_test.rs  appendix_b_native_symbol_support_test.rs  appendix_b_operator_dictionary_test.rs  appendix_b_string_operator_group_test.rs  appendix_c1_italic_mappings_test.rs  appendix_tables_full_support_test.rs  fundamentals_test.rs  general_layout_schemata_test.rs  script_and_limit_schemata_test.rs  section_2_1_1_top_level_math_test.rs  section_2_1_6_displaystyle_scriptlevel_test.rs  section_2_1_attribute_value_interpretation_test.rs  section_2_1_rendering_attributes_coverage_test.rs  section_2_1_rendering_elements_coverage_test.rs  section_3_2_1_mtext_test.rs  (+23 more)
crate/pdf_gen/: Cargo.toml
crate/pdf_render/: Cargo.toml
crate/pdf_render/src/: main.rs
