[workspace]

resolver = "3"

members = [
    "crate/core_ast",
    # "crate/docspiler_ast",
    # "crate/docspiler_ir",
    "crate/docx_gen",
    # "crate/funcs",
    "crate/layout_galley",
    "crate/layout_physical",
    "crate/mathml_core",
    "crate/pdf_gen",
    # "crate/pdf_render",
]

[workspace.dependencies]
rustybuzz = "0.20"
krilla="0.5"
unicode-linebreak = "0.1"
